src/test/ui/derives/deriving-meta-unknown-trait.stderr
error: cannot find derive macro `Eqr` in this scope
  --> $DIR/deriving-meta-unknown-trait.rs:3:10
   |
LL | #[derive(Eqr)]
   |          ^^^ help: try: `Eq`

error: aborting due to previous error

